fix map size issu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div class="container">
-weeeeeeeeeeee
+<div id='boo'class="container">
+<app-auto-complete-map></app-auto-complete-map>
 </div>
 <div class="container">
-  <app-auto-complete-map></app-auto-complete-map>
+
 </div>
+
